[gd_scene load_steps=15 format=3 uid="uid://2s0mdqlvg7up"]

[ext_resource type="Script" path="res://scenes/training_scene.gd" id="1_1wmut"]
[ext_resource type="Theme" uid="uid://c1vds42xiuak4" path="res://assets/interactables/buttons.tres" id="2_hmxqr"]
[ext_resource type="Texture2D" uid="uid://x6vrdemky7j7" path="res://assets/character_images/FeralHogs.png" id="3_2ocut"]
[ext_resource type="Texture2D" uid="uid://ea264ullhfo5" path="res://assets/character_images/Guy.png" id="4_gs0ow"]
[ext_resource type="Texture2D" uid="uid://bi23461yfd5oc" path="res://assets/character_images/BadGuy.png" id="5_bjjoa"]
[ext_resource type="Texture2D" uid="uid://owga2c3fmglu" path="res://assets/character_images/UchihaAkira.png" id="6_thnsg"]
[ext_resource type="Texture2D" uid="uid://dp3k2fhxf3r0d" path="res://assets/character_images/UchihaItami.png" id="7_2x15i"]
[ext_resource type="Texture2D" uid="uid://dyiii4y35dcer" path="res://assets/character_images/SenjuTarashi.png" id="8_4dnbi"]
[ext_resource type="Texture2D" uid="uid://covqhp67oxm8c" path="res://assets/character_images/UchihaSetsuna.png" id="9_d8rjl"]
[ext_resource type="Texture2D" uid="uid://cskwhqgeixman" path="res://assets/character_images/HyugaHeika.png" id="10_1sp8r"]
[ext_resource type="Texture2D" uid="uid://crn250p63axhw" path="res://assets/character_images/Hotdog.png" id="11_kwugi"]
[ext_resource type="Texture2D" uid="uid://cvw1cly24ax64" path="res://assets/character_images/FeralerHogs.png" id="12_ho602"]
[ext_resource type="Texture2D" uid="uid://btwgi4drenq7r" path="res://assets/character_images/SuperGuy.png" id="13_vt8hm"]

[sub_resource type="SpriteFrames" id="SpriteFrames_aj3b0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_2ocut")
}, {
"duration": 1.0,
"texture": ExtResource("4_gs0ow")
}, {
"duration": 1.0,
"texture": ExtResource("5_bjjoa")
}, {
"duration": 1.0,
"texture": ExtResource("6_thnsg")
}, {
"duration": 1.0,
"texture": ExtResource("7_2x15i")
}, {
"duration": 1.0,
"texture": ExtResource("8_4dnbi")
}, {
"duration": 1.0,
"texture": ExtResource("9_d8rjl")
}, {
"duration": 1.0,
"texture": ExtResource("10_1sp8r")
}, {
"duration": 1.0,
"texture": ExtResource("11_kwugi")
}, {
"duration": 1.0,
"texture": ExtResource("12_ho602")
}, {
"duration": 1.0,
"texture": ExtResource("13_vt8hm")
}],
"loop": true,
"name": &"Units",
"speed": 5.0
}]

[node name="TrainingScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1wmut")

[node name="Experience1" type="Button" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 570.0
offset_right = 312.0
offset_bottom = 713.0
theme = ExtResource("2_hmxqr")
text = "Give 1000 EXP"

[node name="Experience2" type="Button" parent="."]
layout_mode = 0
offset_left = 365.0
offset_top = 577.0
offset_right = 626.0
offset_bottom = 709.0
theme = ExtResource("2_hmxqr")
text = "Give 10000 EXP"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 1299.0
offset_right = 256.0
offset_bottom = 1410.0
theme = ExtResource("2_hmxqr")
text = "Back to List"

[node name="InnerBorder" type="ColorRect" parent="."]
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 138.0
offset_top = 180.0
offset_right = -194.0
offset_bottom = -897.0
grow_horizontal = 2
grow_vertical = 2

[node name="UnitIcon" type="AnimatedSprite2D" parent="InnerBorder"]
position = Vector2(193, 179)
sprite_frames = SubResource("SpriteFrames_aj3b0")
animation = &"Units"
speed_scale = 0.0

[node name="levelLabel" type="Label" parent="InnerBorder"]
layout_mode = 0
offset_left = 33.0
offset_top = -83.0
offset_right = 371.0
offset_bottom = 84.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Lvl: "

[node name="Experience3" type="Button" parent="."]
layout_mode = 0
offset_left = 179.0
offset_top = 786.0
offset_right = 495.0
offset_bottom = 913.0
theme = ExtResource("2_hmxqr")
text = "Give 1000000 EXP"

[connection signal="pressed" from="Experience1" to="." method="_on_experience_1_pressed"]
[connection signal="pressed" from="Experience2" to="." method="_on_experience_2_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Experience3" to="." method="_on_experience_3_pressed"]
